add 'book me' button, on click it expands to show a start/end date picker

--- a/LightBnB_WebApp-master/sass/_property-listings.scss
+++ b/LightBnB_WebApp-master/sass/_property-listings.scss
@@ -30,6 +30,11 @@
       padding: 0;
     }
   }
+  &__book {
+    &__date-pickers {
+      display: none;
+    }
+  }
 }
 
 @media screen and (max-width: 400px) {
